--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,10 +14,14 @@
 
 .logo {
     height: 80%;
+    display: block;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .logo img {
     height: 100%;
+    display: block;
 }
 
 .switch {
@@ -90,12 +94,19 @@
 
     .switch {
         display: flex;
+        align-items: center;
+        justify-content: center;
         font-size: 30px;
         color: var(--brown);
+        background: none;
+        border: none;
+        padding: 5px;
+        cursor: pointer;
+        transition: color 0.3s;
     }
 
     .switch:hover {
-        cursor: pointer;
+        color: var(--green);
     }
 
     .links {
