--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -70,24 +70,25 @@
     gap: 5px;
 }
 
-.developer {
+.social {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
 }
 
-.developerText {
+.socialTitle {
     text-align: center;
+    font-weight: 800;
 }
 
-.developerIcons {
+.socialIcons {
     display: flex;
     justify-content: center;
     gap: 10px;
 }
 
-.developerIcons a {
+.socialIcons a {
     height: 45px;
     width: 45px;
     display: flex;
@@ -98,15 +99,15 @@
     transition: 0.3s;
 }
 
-.developerIcons svg {
+.socialIcons svg {
     font-size: 25px;
 }
 
-.developerIcons a:hover {
+.socialIcons a:hover {
     background-color: var(--brown);
 }
 
-.developerIcons a:hover path {
+.socialIcons a:hover path {
     color: var(--white);
 }
 
