--- a/src/sections/Header/Header.module.css
+++ b/src/sections/Header/Header.module.css
@@ -23,6 +23,21 @@
     -webkit-user-drag: none;
 }
 
+/* Mobile background - static image for better performance */
+.mobileBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 0;
+    opacity: 0.3; /* Make it subtle like the video */
+    filter: blur(2px);
+}
+
 .overlay {
     position: relative;
     z-index: 1;
