--- a/src/sections/Enviroment/Enviroment.module.css
+++ b/src/sections/Enviroment/Enviroment.module.css
@@ -50,11 +50,12 @@
 }
 
 .headingButton {
-    padding: 10px;
+    padding: 10px 20px;
     text-decoration: none;
     color: var(--white);
     background-color: transparent;
     border: 1px solid var(--white);
+    border-radius: 50px;
     transition: 0.3s;
 }
 
