--- a/src/sections/Form/Form.module.css
+++ b/src/sections/Form/Form.module.css
@@ -72,11 +72,12 @@
 }
 
 .formSubmit {
-    padding: 10px;
+    padding: 10px 20px;
     font-weight: 700;
     color: var(--brown);
     background: var(--white);
     border: 2px solid var(--brown);
+    border-radius: 50px;
     transition: 0.3s;
 }
 
